# NSE_Econophysics

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  book.html  claude_peda.html  dashboard.html  nse_dashboard.py  pyproject.toml  render.yaml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: UNDERSTANDING_THE_PLOTS.md
notebooks/: combined_nse_analysis.ipynb
