[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nse-econophysics"
version = "1.0.0"
description = "NSE Econophysics Dashboard — Turbulence analysis for Indian stock markets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Kiran Sharma"},
    {name = "Srimonti Dutta"},
    {name = "Sudip Mukherjee"},
]
keywords = [
    "econophysics",
    "turbulence",
    "financial-markets",
    "bispectrum",
    "phase-coupling",
    "NSE",
    "nifty-50",
    "power-spectrum",
    "fat-tails",
    "stock-market",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "yfinance>=0.2.28",
    "rapidfuzz>=3.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/Vivek-Shrivastav/NSE_Econophysics"
Documentation = "https://github.com/Vivek-Shrivastav/NSE_Econophysics/blob/main/docs/UNDERSTANDING_THE_PLOTS.md"
Repository = "https://github.com/Vivek-Shrivastav/NSE_Econophysics"
Issues = "https://github.com/Vivek-Shrivastav/NSE_Econophysics/issues"

[project.scripts]
nse-dashboard = "nse_dashboard:main"
